improve code by using same pattern for status generator as in other processes